Unngå duplikater i hentAlleNorskeVirksomheter